name:                PScheme
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/PScheme#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     PScheme.Reader, PScheme.Eval, PScheme.Env, PScheme.Repl
  build-depends:       base >= 4.7 && < 5,
                       containers >= 0.5.6,
                       transformers >= 0.4.2
  default-language:    Haskell2010

executable PScheme-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , PScheme,
                       transformers >= 0.4.2
  default-language:    Haskell2010

test-suite PScheme-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , containers >= 0.5.6
                     , PScheme
                     , tasty >= 0.11.0
                     , QuickCheck >= 2.5 && < 3
                     , HUnit >= 1.3
                     , tasty-hunit >= 0.9
                     , tasty-quickcheck >= 0.8
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/PScheme
